<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TVHClient</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="intro_overlay_text">Touch to cast Live TV or recordings to your TV.\n\nPlease check that you meet the requirements described in the casting settings.</string>
    <string name="connection_temp_lost">Connection to the cast device is temporarily lost</string>
    <string name="connection_recovered">Connection to the cast device is recovered</string>
    <string name="cast_profile_not_set">No casting profile was selected in the settings. This is required before casting can be used.</string>
    <string name="cast_profile_invalid">The selected profile \'%1$s\' is not the recommended \'%2$s\' one. Please note that casting might not work correctly.</string>
    <string name="pref_casting">Casting</string>
    <string name="pref_casting_sum">Configure casting of programs or recordings to your TV. The server must have transcoding enabled.</string>
    <string name="pref_enable_casting">Enable casting</string>
    <string name="pref_enable_casting_sum">Enable this feature if your server supports transcoding the data in realtime.</string>
    <string name="pref_show_cast_minicontroller">Cast controls</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="cast">Cast</string>
    <string name="record_once">Record</string>
    <string name="record_once_and_edit">Record and Edit</string>
    <string name="record_once_custom_profile">Record with different profile</string>
    <string name="record_series">Record as series recording</string>
    <string name="search_imdb">Search on IMDB</string>
    <string name="search_epg">Search the program guide</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="set_active">Activate</string>
    <string name="set_not_active">Deactivate</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="send_wol">Wake up</string>
    <string name="remove">Remove</string>
    <string name="pref_manage_connections">Manage connections</string>
    <string name="pref_manage_connections_sum">Select your active connection to a TVHeadend server or add, edit or remove connections.</string>
    <string name="pref_connections">Connections</string>
    <string name="pref_name">Connection name</string>
    <string name="pref_name_sum">Enter a unique name of the connection</string>
    <string name="pref_selected">Default connection</string>
    <string name="pref_selected_sum">Select to make this the default connection and use it after the application has started.</string>
    <string name="pref_host">Hostname</string>
    <string name="pref_host_sum">Enter the server hostname</string>
    <string name="pref_port">HTSP Port</string>
    <string name="pref_port_sum">Enter the server port</string>
    <string name="pref_streaming_port">HTTP Port for media streaming</string>
    <string name="pref_streaming_port_sum" tools:ignore="PluralsCandidate">Port %d will be used for media streaming. The default port is 9981 which is usually fine to use.</string>
    <string name="pref_user">Username</string>
    <string name="pref_user_sum">Enter username</string>
    <string name="pref_pass">Password</string>
    <string name="pref_pass_sum">Enter password</string>
    <string name="pref_wol_address">MAC address</string>
    <string name="pref_wol_address_sum">Enter the MAC address of the host (e.g. 00:ef:aa:dc:09:45)</string>
    <string name="pref_wol_port">Wake on LAN Port</string>
    <string name="pref_wol_port_sum" tools:ignore="PluralsCandidate">Port %d will be used to wake up the server. The default is 9.</string>
    <string name="pref_wol_broadcast">Use Broadcast</string>
    <string name="pref_wol_broadcast_sum">Send the WOL packet as a broadcast. Some routers do not allow this kind of WOL.</string>
    <string name="pref_user_interface">User interface</string>
    <string name="pref_channels">Channels</string>
    <string name="pref_icons">Channel icons</string>
    <string name="pref_icons_sum">Show the channel icons.</string>
    <string name="pref_big_icons">Big channel icon</string>
    <string name="pref_big_icons_sum">Show a larger version of the channel icon.</string>
    <string name="pref_tag_icon">Channel tag icon</string>
    <string name="pref_tag_icon_sum">Show the icon for a channel tag instead of the application logo.</string>
    <string name="pref_theme">Light theme</string>
    <string name="pref_theme_sum">Use a light theme</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_sum">Choose the language that shall be used by the application.</string>
    <string name="pref_sort_channels">Channel Order</string>
    <string name="pref_sort_channels_sum">Choose in which order the channels will be displayed.</string>
    <string name="pref_information">Information</string>
    <string name="pref_changelog">Changelog</string>
    <string name="pref_changelog_sum">Show a list of features and changes of the different application versions.</string>
    <string name="pref_program_guide">Program guide</string>
    <string name="pref_program_guide_sum">Configure the program guide screen and how the data shall be displayed.</string>
    <string name="pref_epg_hours_visible">Hours visible</string>
    <string name="pref_epg_hours_visible_sum">Define how many hours of the program guide shall be shown on one screen. Too many hours will display too many programs and thus clutters the screen and decrease the readability.</string>
    <string name="pref_epg_max_days">Maximum days to show</string>
    <string name="pref_epg_max_days_sum">Define the maxmimum number of days of program guide data that shall be shown.</string>
    <string name="pref_genre_colors">Genre colors</string>
    <string name="pref_genre_colors_sum">Specify on which screens the genre color shall be shown.</string>
    <string name="pref_genre_colors_channels">Channels</string>
    <string name="pref_genre_colors_channels_sum">The genre color will be shown as a vertical line on the left side of the channel list screen.</string>
    <string name="pref_genre_colors_programs">Programs</string>
    <string name="pref_genre_colors_programs_sum">The genre color will be shown as a vertical line on the left side of the program lists and the program details screen.</string>
    <string name="pref_genre_colors_epg">Program guide</string>
    <string name="pref_genre_colors_epg_sum">Shows the genre color in the background of each program guide item.</string>
    <string name="pref_genre_colors_search_results">Search results</string>
    <string name="pref_genre_colors_search_results_sum">The genre color will be shown as a vertical line on the left side of the search result list.</string>
    <string name="pref_genre_colors_visibility_message">Set the visibility of the colors. Higher values mean stronger colors.</string>
    <string name="pref_genre_colors_visibility">Genre color visibility</string>
    <string name="pref_genre_colors_visibility_value">%1$d%% visible</string>
    <string name="pref_misc">Miscellaneous</string>
    <string name="pref_unlocker">Additional features</string>
    <string name="pref_unlocker_sum">Enable access to additional features and support further development by buying the unlocked version of TVHClient.</string>
    <string name="pref_menu_visibility">Menu visibility</string>
    <string name="pref_menu_visibility_sum">Hide or show certain menu items.</string>
    <string name="pref_hide_menu_delete_all_recordings">Hide the \'Delete all recordings\' menu</string>
    <string name="pref_hide_menu_delete_all_recordings_sum">Do not show this menu to prevent an accidental deletion of all recorded programs.</string>
    <string name="pref_hide_menu_cancel_all_recordings">Hide the \'Cancel all recordings\' menu</string>
    <string name="pref_hide_menu_cancel_all_recordings_sum">Do not show this menu to accidentally prevent cancelling all scheduled programs.</string>
    <string name="pref_visible_menu_icon_tags">Show the \'Channel Tags\' menu</string>
    <string name="pref_visible_menu_icon_tags_sum">Try to show the channel tag menu in the action bar and not in the three dot menu.</string>
    <string name="pref_profiles">Profiles</string>
    <string name="pref_profiles_sum">Define the profiles how content shall be recorded or played.</string>
    <string name="pref_recording_profiles">Recording profiles</string>
    <string name="pref_recording_profiles_sum">Select a profile that the server shall use to record a scheduled program.</string>
    <string name="pref_playback_profiles">Playback profiles</string>
    <string name="pref_playback_profiles_sum">Select a profile that shall be used to play a recorded program.</string>
    <string name="pref_cast_profiles">Cast playback profiles</string>
    <string name="pref_cast_profiles_sum">Select a profile that shall be used to cast a channel or recorded program to a chromecast or similar device.</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_download_directory">Download directory</string>
    <string name="pref_download_directory_sum">Recordings will be downloaded into the following directory: \'%s\'</string>
    <string name="pref_show_next_program">Show next program in channel list</string>
    <string name="pref_show_next_program_sum">The name of the program coming up next is displayed in the channel list. It is shown below the progress indicator.</string>
    <string name="pref_play_when_channel_icon_selected">Channel icon plays TV or recording</string>
    <string name="pref_play_when_channel_icon_selected_sum">Start playing the current program or recording when the channel icon is selected in the channel list, program guide or recording list screen.</string>
    <string name="pref_programs">Programs</string>
    <string name="pref_playback_and_recording">Playback and recording</string>
    <string name="pref_advanced_settings">Advanced settings</string>
    <string name="completed_recordings">Completed recordings</string>
    <string name="scheduled_recordings">Scheduled recordings</string>
    <string name="failed_recordings">Failed recordings</string>
    <string name="removed_recordings">Removed recordings</string>
    <string name="series_recordings">Series recordings</string>
    <string name="timer_recordings">Timer recordings</string>
    <string name="channels">Channels</string>
    <string name="status">Status</string>
    <string name="pref_show_program_artwork_sum">Displays the artwork/poster image to the current program. The server must provide the information.</string>
    <string name="pref_show_program_artwork">Show program artwork/poster</string>
    <string name="pref_show_progressbar_sum">Indicates in the channel list how much of the current program has already been shown.</string>
    <string name="pref_show_progressbar">Show progressbar</string>
    <string name="pref_customize_user_interface_sum">Choose from a variety of options to decide which information shall be shown in each screen.</string>
    <string name="pref_customize_user_interface">Customize the user interface</string>
    <string name="pref_general">General</string>
    <string name="pref_date_time_format">Date and time format</string>
    <string name="pref_date_time_format_sum">Display the date and time as usually used in your country. Otherwise the format \'31.12.2017, 21:09\' is used.</string>
    <string name="pref_show_program_subtitle_sum">Displays the subtitle to the current program</string>
    <string name="pref_show_program_subtitle">Show program subtitle</string>
    <string name="add_reminder">Add reminder</string>
</resources>