<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/org.tvheadend.tvhclient">

    <PreferenceCategory android:title="@string/pref_general">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="lightThemePref"
            android:summary="@string/pref_theme_sum"
            android:title="@string/pref_theme" />
        <CheckBoxPreference
            android:name="@string/pref_date_time_format"
            android:defaultValue="false"
            android:key="useLocalizedDateTimeFormatPref"
            android:summary="@string/pref_date_time_format_sum"
            android:title="@string/pref_date_time_format" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_channels">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showIconPref"
            android:summary="@string/pref_icons_sum"
            android:title="@string/pref_icons" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="showIconPref"
            android:key="showBigIconPref"
            android:summary="@string/pref_big_icons_sum"
            android:title="@string/pref_big_icons" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="playWhenChannelIconSelectedPref"
            android:summary="@string/pref_play_when_channel_icon_selected_sum"
            android:title="@string/pref_play_when_channel_icon_selected" />
        <ListPreference
            android:name="@string/pref_sort_channels"
            android:defaultValue="0"
            android:dialogTitle="@string/pref_sort_channels"
            android:entries="@array/pref_sort_channels_names"
            android:entryValues="@array/pref_sort_channels_ids"
            android:key="sortChannelsPref"
            android:summary="@string/pref_sort_channels_sum"
            android:title="@string/pref_sort_channels" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showTagIconPref"
            android:summary="@string/pref_tag_icon_sum"
            android:title="@string/pref_tag_icon" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showProgramProgressbarPref"
            android:summary="@string/pref_show_progressbar_sum"
            android:title="@string/pref_show_progressbar" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="showNextProgramPref"
            android:summary="@string/pref_show_next_program_sum"
            android:title="@string/pref_show_next_program" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_programs">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showProgramSubtitlePref"
            android:summary="@string/pref_show_program_subtitle_sum"
            android:title="@string/pref_show_program_subtitle" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_show_program_artwork"
            android:summary="@string/pref_show_program_artwork_sum"
            android:title="@string/pref_show_program_artwork" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_program_guide_sum"
        android:title="@string/pref_program_guide">

        <EditTextPreference
            android:id="@+id/pref_epg_hours_visible"
            android:name="@string/pref_epg_hours_visible"
            android:defaultValue="4"
            android:key="epgHoursVisible"
            android:numeric="integer"
            android:summary="@string/pref_epg_hours_visible_sum"
            android:title="@string/pref_epg_hours_visible" />
        <EditTextPreference
            android:id="@+id/pref_epg_max_days"
            android:name="@string/pref_epg_max_days"
            android:defaultValue="7"
            android:key="epgMaxDays"
            android:numeric="integer"
            android:summary="@string/pref_epg_max_days_sum"
            android:title="@string/pref_epg_max_days" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_genre_colors_sum"
        android:title="@string/pref_genre_colors">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showGenreColorsChannelsPref"
            android:summary="@string/pref_genre_colors_channels_sum"
            android:title="@string/pref_genre_colors_channels" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showGenreColorsProgramsPref"
            android:summary="@string/pref_genre_colors_programs_sum"
            android:title="@string/pref_genre_colors_programs" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showGenreColorsGuidePref"
            android:summary="@string/pref_genre_colors_epg_sum"
            android:title="@string/pref_genre_colors_epg" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="showGenreColorsSearchPref"
            android:summary="@string/pref_genre_colors_search_results_sum"
            android:title="@string/pref_genre_colors_search_results" />

        <org.tvheadend.tvhclient.SliderPreference
            android:defaultValue="70"
            android:dialogMessage="@string/pref_genre_colors_visibility_message"
            android:key="showGenreColorsVisibilityPref"
            android:summary="@string/pref_genre_colors_visibility_value"
            android:title="@string/pref_genre_colors_visibility"
            custom:maximumValue="100"
            custom:minimumValue="30" />
    </PreferenceCategory>

    <PreferenceCategory
        android:summary="@string/pref_menu_visibility_sum"
        android:title="@string/pref_menu_visibility">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hideMenuDeleteAllRecordingsPref"
            android:summary="@string/pref_hide_menu_delete_all_recordings_sum"
            android:title="@string/pref_hide_menu_delete_all_recordings" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hideMenuCancelAllRecordingsPref"
            android:summary="@string/pref_hide_menu_cancel_all_recordings_sum"
            android:title="@string/pref_hide_menu_cancel_all_recordings" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="visibleMenuIconTagsPref"
            android:summary="@string/pref_visible_menu_icon_tags_sum"
            android:title="@string/pref_visible_menu_icon_tags" />
    </PreferenceCategory>

</PreferenceScreen>