<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_connections">
        <Preference
            android:key="list_connections"
            android:summary="@string/pref_manage_connections_sum"
            android:title="@string/pref_manage_connections" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_user_interface">
        <ListPreference
            android:name="@string/pref_language"
            android:defaultValue="default"
            android:dialogTitle="@string/pref_language"
            android:entries="@array/pref_language_list_display"
            android:entryValues="@array/pref_language_list"
            android:key="language"
            android:summary="@string/pref_language_sum"
            android:title="@string/pref_language" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="light_theme_enabled"
            android:summary="@string/pref_theme_sum"
            android:title="@string/pref_theme" />
        <PreferenceScreen
            android:key="user_interface"
            android:summary="@string/pref_customize_user_interface_sum"
            android:title="@string/pref_customize_user_interface" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_playback_and_recording">
        <PreferenceScreen
            android:key="profiles"
            android:summary="@string/pref_profiles_sum"
            android:title="@string/pref_profiles" />
        <PreferenceScreen
            android:key="casting"
            android:summary="@string/pref_casting_sum"
            android:title="@string/pref_casting" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="internal_player_enabled"
            android:summary="Play live TV or recordings with the internal player which uses the HTSP protocol"
            android:title="Enable Internal Player" />
        <PreferenceScreen
            android:dependency="internal_player_enabled"
            android:title="Internal player settings">

            <PreferenceCategory android:title="Audio and Video">
                <ListPreference
                    android:defaultValue="@string/pref_default_buffer_playback_ms"
                    android:dialogTitle="Buffer Seconds"
                    android:entries="@array/buffer_playback_ms_names"
                    android:entryValues="@array/buffer_playback_ms_values"
                    android:key="buffer_playback_ms"
                    android:summary="How many seconds to buffer before starting playback"
                    android:title="Buffer Duration" />
                <CheckBoxPreference
                    android:defaultValue="@bool/pref_default_audio_passthrough_decoder_enabled"
                    android:key="audio_passthrough_decoder_enabled"
                    android:summary="You must also ensure the system audio settings allows passthrough"
                    android:title="Enable Audio Passthrough" />
                <CheckBoxPreference
                    android:defaultValue="@bool/pref_default_audio_tunneling_enabled"
                    android:key="audio_tunneling_enabled"
                    android:summary="Enable support for DSP audio tunneling"
                    android:title="Enable Audio Tunneling" />
                <CheckBoxPreference
                    android:defaultValue="@bool/pref_default_audio_ffmpeg_audio_enabled"
                    android:key="ffmpeg_audio_enabled"
                    android:title="Enable FFMpeg Audio Codecs" />
                <CheckBoxPreference
                    android:defaultValue="@bool/pref_default_captions_apply_embedded_styles"
                    android:key="captions_apply_embedded_styles"
                    android:title="Apply embedded caption styles" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_misc">
        <Preference
            android:key="unlocker"
            android:summary="@string/pref_unlocker_sum"
            android:title="@string/pref_unlocker" />
        <PreferenceScreen
            android:key="notifications"
            android:title="@string/pref_notifications" />
        <Preference
            android:key="download_directory"
            android:summary="@string/pref_download_directory_sum"
            android:title="@string/pref_download_directory" />
        <PreferenceScreen
            android:key="advanced"
            android:title="@string/pref_advanced_settings" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_information">
        <Preference
            android:key="changelog"
            android:summary="@string/pref_changelog_sum"
            android:title="@string/pref_changelog" />
    </PreferenceCategory>

</PreferenceScreen>