<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_play"
        android:icon="?attr/ic_menu_play"
        android:title="@string/play"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_cast"
        android:icon="?attr/ic_menu_cast"
        android:title="@string/cast"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_record_program"
        android:icon="?attr/ic_menu_record_once"
        android:title="@string/record_once"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_record_program_and_edit"
        android:icon="?attr/ic_menu_record_once_and_edit"
        android:title="@string/record_once_and_edit" />
    <item
        android:id="@+id/menu_record_program_with_custom_profile"
        android:icon="?attr/ic_menu_record_once_custom_profile"
        android:title="@string/record_once_custom_profile" />
    <item
        android:id="@+id/menu_record_program_as_series_recording"
        android:icon="?attr/ic_menu_record_series"
        android:title="@string/record_series" />
    <item
        android:id="@+id/menu_remove_recording"
        android:icon="?attr/ic_menu_record_remove"
        android:title="@string/remove"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_stop_recording"
        android:icon="?attr/ic_menu_stop"
        android:title="@string/stop"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_cancel_recording"
        android:icon="?attr/ic_menu_cancel"
        android:title="@string/cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_add_notification"
        android:icon="?attr/ic_menu_info"
        android:title="@string/add_reminder" />

</menu>