<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_channel_list"
            android:icon="?attr/ic_menu_channels"
            android:title="@string/channels"
            app:actionLayout="@layout/navigation_menu_counter" />
        <item
            android:id="@+id/nav_program_guide"
            android:icon="?attr/ic_menu_program_guide"
            android:title="@string/pref_program_guide" />
        <item
            android:id="@+id/nav_completed_recordings"
            android:icon="?attr/ic_menu_completed_recordings"
            android:title="@string/completed_recordings"
            app:actionLayout="@layout/navigation_menu_counter" />
        <item
            android:id="@+id/nav_scheduled_recordings"
            android:icon="?attr/ic_menu_scheduled_recordings"
            android:title="@string/scheduled_recordings"
            app:actionLayout="@layout/navigation_menu_counter" />
        <item
            android:id="@+id/nav_series_recordings"
            android:icon="?attr/ic_menu_series_recordings"
            android:title="@string/series_recordings"
            app:actionLayout="@layout/navigation_menu_counter" />
        <item
            android:id="@+id/nav_timer_recordings"
            android:icon="?attr/ic_menu_timer_recordings"
            android:title="@string/timer_recordings"
            app:actionLayout="@layout/navigation_menu_counter" />
        <item
            android:id="@+id/nav_failed_recordings"
            android:icon="?attr/ic_menu_failed_recordings"
            android:title="@string/failed_recordings"
            app:actionLayout="@layout/navigation_menu_counter" />
        <item
            android:id="@+id/nav_removed_recordings"
            android:icon="?attr/ic_menu_removed_recordings"
            android:title="@string/removed_recordings"
            app:actionLayout="@layout/navigation_menu_counter" />
    </group>
    <group android:id="@+id/info_group">
        <item
            android:id="@+id/nav_status"
            android:icon="?attr/ic_menu_status"
            android:title="@string/status" />
        <item
            android:id="@+id/nav_information"
            android:icon="?attr/ic_menu_information"
            android:title="@string/pref_information" />
        <item
            android:id="@+id/nav_settings"
            android:icon="?attr/ic_menu_settings"
            android:title="@string/settings" />
    </group>
    <group android:id="@+id/extras_group">
        <item
            android:id="@+id/nav_extras"
            android:icon="?attr/ic_menu_extras"
            android:title="@string/pref_unlocker" />
    </group>
</menu>
